package br.cadeira.enums;

public enum TipoCadeira {
    ESCRITORIO,
    GAMER,
    REFEITORIO
}
